fix(SideBar): removes overflow from .contents.

--- a/components/SideBar/styles.module.css
+++ b/components/SideBar/styles.module.css
@@ -13,7 +13,6 @@
 
 .contents {
   flex: 1;
-  overflow-y: auto;
   padding: 10px;
 }
 
